# geEngineSDK

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: tests.yml
cmake/: Externals.cmake  Externals_Assimp.cmake  Externals_Catch2.cmake  Externals_Compressonator.cmake  Externals_EXR.cmake  Externals_ImGui.cmake  Externals_Json.cmake  Externals_KTX.cmake  Externals_LZ4.cmake  Externals_Lua.cmake  Externals_MiniZip.cmake  Externals_RTTR.cmake  Externals_SFML.cmake  Externals_Sol2.cmake  Externals_ZlibNG.cmake  Link_RTTR.cmake  Warnings.cmake
docker/: Dockerfile
games/: CMakeLists.txt
games/ImGuiSample/: CMakeLists.txt  geImGuiPlatform.cpp  geImGuiPlatform.h  imgui_helper.h  main.cpp
games/SampleGame/: CMakeLists.txt  main.cpp
games/Shared/Config/: EngineConfig.ini
games/Shared/Reports/css/: debug.css
sdk/: CMakeLists.txt
sdk/geCore/: CMakeLists.txt
sdk/geCore/include/: geActor.h  geAnimationComponent.h  geAppInputEvents.h  geCamera.h  geCodecManager.h  geComponent.h  geCoreBaseApp.h  geCoreFeatures.h  geDebugDraw.h  geDeferredCallManager.h  geDiskFileSystem.h  geFileTracker.h  geGameConfig.h  geGraphicsInterfaces.h  geGraphicsTypes.h  geICodec.h  geInputLayout.h  geMaterial.h  geModel.h  geModelComponent.h  geMountManager.h  gePrerequisitesCore.h  geRasterizationState.h  geRenderAPI.h  geRenderManager.h  geResource.h  geResourceManagerBase.h  geSamplerState.h  geScene.h  geSceneNode.h  geShader.h  geSkeleton.h  geTexture.h  geTextureManager.h  geVertexDeclaration.h  geZipDataStream.h  geZipFileSystem.h
sdk/geCore/src/: geActor.cpp  geCamera.cpp  geCodecManager.cpp  geCoreBaseApp.cpp  geDebugDraw.cpp  geDeferredCallManager.cpp  geDiskFileSystem.cpp  geFileTracker.cpp  geGameConfig.cpp  geICodec.cpp  geInputLayout.cpp  geModel.cpp  geMountManager.cpp  geRasterizationState.cpp  geRenderAPI.cpp  geRenderManager.cpp  geSamplerState.cpp  geScene.cpp  geShader.cpp  geSkeleton.cpp  geTexture.cpp  geTextureManager.cpp  geVertexDeclaration.cpp  geZipDataStream.cpp  geZipFileSystem.cpp
sdk/geUtilities/: CMakeLists.txt
sdk/geUtilities/include/: geBitmapWriter.h  geBox.h  geBox2D.h  geBox2DI.h  geBoxSphereBounds.h  geColor.h  geCrashHandler.h  geDataStream.h  geDebug.h  geDegree.h  geDynLib.h  geDynLibManager.h  geEvent.h  geFlags.h  geFloat10.h  geFloat11.h  geFloat16.h  geFloat16Color.h  geFloat32.h  geFrameAlloc.h  geFwdDeclUtil.h  geLog.h  geMath.h  geMatrix4.h  geMemoryAllocator.h  gePath.h  gePlane.h  gePlatformDefines.h  gePlatformTypes.h  gePlatformUsing.h  gePlatformUtility.h  gePrerequisitesUtilities.h  geQuaternion.h  geRTTRMeta.h  geRadian.h  geRandom.h  geRect2.h  geRotator.h  geSmallVector.h  geSmartEnum.h  (+19 more)
sdk/geUtilities/src/: geBitmapWriter.cpp  geBox.cpp  geBox2D.cpp  geBox2DI.cpp  geBoxSphereBounds.cpp  geColor.cpp  geCompression.cpp  geDataStream.cpp  geDebug.cpp  geDegree.cpp  geDynLib.cpp  geDynLibManager.cpp  geFileSystem.cpp  geFrameAlloc.cpp  geMath.cpp  geMatrix4.cpp  geMessageHandler.cpp  gePath.cpp  gePlatformUtility.cpp  geQuaternion.cpp  geRadian.cpp  geRotator.cpp  geSphere.cpp  geString.cpp  geStringID.cpp  geTaskScheduler.cpp  geThreadPool.cpp  geTime.cpp  geTimer.cpp  geTransform.cpp  geUUID.cpp  geUnicode.cpp  geVector2.cpp  geVector2I.cpp  geVector3.cpp  geVector4.cpp
sdk/geUtilities/src/posix/: gePosixCrashHandler.cpp
sdk/geUtilities/src/win32/: geWin32CrashHandler.cpp
sdk/plugins/: CMakeLists.txt
sdk/plugins/geCodec_Assimp/: CMakeLists.txt
sdk/plugins/geCodec_Assimp/include/: geModelBuilder.h
sdk/plugins/geCodec_Assimp/src/: geCodecDLL.cpp  geModelBuilder.cpp  geSkeletonBuilder.cpp
sdk/plugins/geCodec_AssimpAnim/: CMakeLists.txt
sdk/plugins/geCodec_AssimpAnim/include/: geModelBuilder.h  geSkeletonBuilder.h
sdk/plugins/geCodec_AssimpAnim/src/: geCodecDLL.cpp  geModelBuilder.cpp  geSkeletonBuilder.cpp
sdk/plugins/geCodec_DDSLoader/: CMakeLists.txt
sdk/plugins/geCodec_DDSLoader/include/: geDDSLoader.h
sdk/plugins/geCodec_DDSLoader/src/: geCodecDLL.cpp  geDDSLoader.cpp
sdk/plugins/geCodec_EXRLoader/: CMakeLists.txt
sdk/plugins/geCodec_EXRLoader/include/: geEXRLoader.h
sdk/plugins/geCodec_EXRLoader/src/: geCodecDLL.cpp
sdk/plugins/geCodec_KTXLoader/: CMakeLists.txt
sdk/plugins/geCodec_KTXLoader/include/: geKTXLoader.h
sdk/plugins/geCodec_KTXLoader/src/: geCodecDLL.cpp  geKTXLoader.cpp
sdk/plugins/geCodec_StbImage/: CMakeLists.txt
sdk/plugins/geCodec_StbImage/src/: geCodecDLL.cpp
sdk/plugins/geRenderAPIDX11/: CMakeLists.txt
sdk/plugins/geRenderAPIDX11/include/: DX11RenderAPI.h  DXGraphicsBuffer.h  DXGraphicsInterfaces.h  DXTexture.h  DXTranslateUtils.h  gePrerequisitesRenderAPIDX11.h
sdk/plugins/geRenderAPIDX11/src/: DX11RenderAPI.cpp  DXTexture.cpp  DXTranslateUtils.cpp
sdk/plugins/geRenderAPINull/: CMakeLists.txt
sdk/plugins/geRenderAPINull/include/: NullGraphicsBuffer.h  NullGraphicsInterfaces.h  NullInputLayout.h  NullRenderAPI.h  NullShader.h  NullTexture.h  NullTranslateUtils.h  gePrerequisitesRenderAPINull.h
sdk/plugins/geRenderAPINull/src/: NullRenderAPI.cpp  NullShader.cpp  NullTexture.cpp  NullTranslateUtils.cpp  geNullPlugin.cpp
tests/: CMakeLists.txt
tests/geCore_Tests/: CMakeLists.txt
tests/geCore_Tests/src/: core_VirtualFileSystem.cpp
tests/geUtilities_Tests/: CMakeLists.txt
tests/geUtilities_Tests/src/: core_BMPWriter.cpp  core_Compression.cpp  core_DataStream.cpp  core_Event.cpp  core_FileSystem.cpp  core_MessageHandler.cpp  core_Random.cpp  core_SmartEnum.cpp  core_String.cpp  core_TaskScheduler.cpp  core_ThreadPool.cpp  core_Threading.cpp  core_Time.cpp  core_UUID.cpp  core_dependencies.cpp  core_floats.cpp  core_types.cpp  main.cpp  math_Bounds.cpp  math_Color.cpp  math_Matrix4.cpp  math_Quaternion.cpp  math_Rotator.cpp  math_Transform.cpp  math_Vector2.cpp  math_Vector2Half.cpp  math_Vector3.cpp  math_Vector4.cpp  math_VectorNI.cpp  math_angle.cpp  math_main.cpp
